prepare for gif recording

--- a/GifSnip/GifSnip.vcxproj.filters
+++ b/GifSnip/GifSnip.vcxproj.filters
@@ -12,5 +12,6 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="DisplaysUtil.h" />
   </ItemGroup>
 </Project>
