--- a/GifSnip/GifSnip.vcxproj
+++ b/GifSnip/GifSnip.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DisplaysUtil.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
