--- a/GifSnip/GifSnip.vcxproj.filters
+++ b/GifSnip/GifSnip.vcxproj.filters
@@ -8,10 +8,21 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="FrameCompositor.cpp" />
+    <ClCompile Include="GifEncoder.cpp" />
+    <ClCompile Include="TextureDiffer.cpp" />
+    <ClCompile Include="CaptureGifEncoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="DisplaysUtil.h" />
+    <ClInclude Include="FrameCompositor.h" />
+    <ClInclude Include="GifEncoder.h" />
+    <ClInclude Include="TextureDiffer.h" />
+    <ClInclude Include="CaptureGifEncoder.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="TextureDiff.hlsl" />
   </ItemGroup>
 </Project>
